--- a/product.html
+++ b/product.html
@@ -19,7 +19,7 @@
           <img src="${product.image}" alt="${product.name}" />
           <h1>${product.name}</h1>
           <p>${product.description}</p>
-          <a href="${product.link}" target="_blank"><button>Buy Now</button></a>
+          <a href="${https://amzn.to/3Gahec0" target="_blank"><button>Buy Now</button></a>
         `;
 
         const related = products.filter(p => p.id !== productId).slice(0, 4);
